fix css error - feature 1-3 circle alignment on desktop view

--- a/output.css
+++ b/output.css
@@ -569,10 +569,6 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mb-\[10px\]{
-  margin-bottom: 10px;
-}
-
 .mb-\[21px\]{
   margin-bottom: 21px;
 }
@@ -681,8 +677,16 @@ video {
   place-items: center;
 }
 
+.items-end{
+  align-items: flex-end;
+}
+
 .items-center{
   align-items: center;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -761,35 +765,8 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
-}
-
-.border{
-  border-width: 1px;
-}
-
-.border-2{
-  border-width: 2px;
-}
-
 .border-4{
   border-width: 4px;
-}
-
-.border-blue-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.border-green-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity));
-}
-
-.border-red-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -978,6 +955,10 @@ video {
     margin-right: 18px;
   }
 
+  .lg\:mb-\[10px\]{
+    margin-bottom: 10px;
+  }
+
   .lg\:mb-\[16px\]{
     margin-bottom: 16px;
   }
@@ -1006,10 +987,6 @@ video {
     margin-top: 64px;
   }
 
-  .lg\:mb-\[10px\]{
-    margin-bottom: 10px;
-  }
-
   .lg\:block{
     display: block;
   }
@@ -1036,6 +1013,10 @@ video {
 
   .lg\:justify-start{
     justify-content: flex-start;
+  }
+
+  .lg\:justify-end{
+    justify-content: flex-end;
   }
 
   .lg\:justify-center{
@@ -1104,6 +1085,10 @@ video {
 
   .lg\:text-center{
     text-align: center;
+  }
+
+  .lg\:text-right{
+    text-align: right;
   }
 
   .lg\:text-\[16px\]{
